--- a/local.yml
+++ b/local.yml
@@ -1,6 +1,12 @@
 - hosts: localhost
+  connection: local
   become: true
+
+  pre_tasks:
+    - name: update repositories
+      apt:
+        update_cache: yes
+        changed_when: false
+
   tasks:
-  - name: Install htop
-    apt:
-      name: htop
+   - include: tasks/packages.yml
